--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -19,17 +19,14 @@ title = "Resiliz"
    email = "virajamara@gmail.com"
    image = "img/logo.jpg"
    imageQuality = 96
-   headline = "Resilient and Efficient"
+   headline = "Powered by Resilience, Proven by Results"
    bio = "Results-driven Full Stack Developer with 8+ years of experience in startups and large-scale companies. Strong problem-solver, agile team player, and proactive communicator. Passionate about lifelong learning, innovation, and building scalable software solutions."
    links = [
-     { email = "mailto:hello@your_domain.com" },
-     { link = "https://link-to-some-website.com/" },
-     { blogger = "https://username.blogspot.com/" },
-     { discord = "https://discord.gg/invitecode" },
-     { github = "https://github.com/username" },
-     { gitlab = "https://gitlab.com/username" },
-     { lastfm = "https://lastfm.com/user/username" },
-     { linkedin = "https://linkedin.com/in/username" },
-     { medium = "https://medium.com/username" },
-     { stack-overflow = "https://stackoverflow.com/users/userid/username" },
+     { email = "mailto:virajamara@gmail.com" },
+     { link = "profile" },
+     { github = "https://github.com/sameerabit" },
+     { gitlab = "https://gitlab.com/virajamara" },
+     { linkedin = "https://www.linkedin.com/in/viraj-amarasinghe" },
+     { medium = "https://medium.com/@sameeraviraj" },
+     { stack-overflow = "https://stackoverflow.com/users/3755369/viraj-amarasinghe" },
    ]
