--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -1,7 +1,7 @@
 # -- Main Menu --
 # The main menu is displayed in the header at the top of the page.
 # Acceptable parameters are name, pageRef, page, url, title, weight.
-# 
+#
 # The simplest menu configuration is to provide:
 #   name = The name to be displayed for this menu link
 #   pageRef = The identifier of the page or section to link to
@@ -11,25 +11,41 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Blog"
-  pageRef = "posts"
+  name = "Hire Me"
+  pageRef = "hire-me"
   weight = 10
 
 [[main]]
-  name = "Parent"
+  name = "About Me"
+  pageRef = "about"
   weight = 20
 
-[[main]]
-  name = "example sub-menu 1"
-  parent = "Parent"
-  pageRef = "posts"
-  weight = 20
 
 [[main]]
-  name = "example sub-menu 2"
-  parent = "Parent"
-  pageRef = "posts"
-  weight = 20
+  name = "Clients"
+  pageRef = "clients"
+  weight = 30
+
+[[main]]
+  name = "Blog"
+  pageRef = "blog"
+  weight = 40
+
+# [[main]]
+#   name = "Parent"
+#   weight = 20
+
+# [[main]]
+#   name = "example sub-menu 1"
+#   parent = "Parent"
+#   pageRef = "posts"
+#   weight = 20
+
+# [[main]]
+#   name = "example sub-menu 2"
+#   parent = "Parent"
+#   pageRef = "posts"
+#   weight = 20
 
 #[[subnavigation]]
 #  name = "An interesting topic"
@@ -42,15 +58,15 @@
 #  pageRef = "categories/awesome"
 #  weight = 20
 
-[[main]]
-  name = "Categories"
-  pageRef = "categories"
-  weight = 20
+# [[main]]
+#   name = "Categories"
+#   pageRef = "categories"
+#   weight = 20
 
-[[main]]
-  name = "Tags"
-  pageRef = "tags"
-  weight = 30
+# [[main]]
+#   name = "Tags"
+#   pageRef = "tags"
+#   weight = 30
 
 
 # -- Footer Menu --
@@ -58,12 +74,12 @@
 # the copyright notice. Configure as per the main menu above.
 
 
- [[footer]]
-   name = "Tags"
-   pageRef = "tags"
-   weight = 10
+#  [[footer]]
+#    name = "Tags"
+#    pageRef = "tags"
+#    weight = 10
 
- [[footer]]
-   name = "Categories"
-   pageRef = "categories"
-   weight = 20
+#  [[footer]]
+#    name = "Categories"
+#    pageRef = "categories"
+#    weight = 20
